bluec-tests/tests/valid/typedef/redeclare_symbol_different_scope.c
int main(void) {
    typedef int AA;
    {
        int AA = 5;
        int BB = AA * 2;
        return BB;
    }
}